@@ -95,6 +95,11 @@ int service_notification(service *svc, int type, char *not_author, char *not_dat
 		return ERROR;
 		}
 
+	/* log state due to notification event when stalking_options N is set */
+	if (should_stalk_notifications(svc)) {
+		log_service_event(svc);
+	}
+
 	/* check the viability of sending out a service notification */
 	if(check_service_notification_viability(svc, type, options) == ERROR) {
 		log_debug_info(DEBUGL_NOTIFICATIONS, 0, "Notification viability test failed.  No notification will be sent out.\n");
@@ -1070,6 +1075,11 @@ int host_notification(host *hst, int type, char *not_author, char *not_data, int
 		}
 
 	log_debug_info(DEBUGL_NOTIFICATIONS, 0, "Notification viability test passed.\n");
+
+	/* log state due to notification event when stalking_options N is set */
+	if (should_stalk_notifications(hst)) {
+		log_host_event(hst);
+	}
 
 	/* should the notification number be increased? */
 	if(type == NOTIFICATION_NORMAL || (options & NOTIFICATION_OPTION_INCREMENT)) {
